Adds get contacts integration test

--- a/test/esendex_test.properties
+++ b/test/esendex_test.properties
@@ -1,4 +1,4 @@
-tests.username=USERNAME
-tests.password=PASSWORD
-tests.account=ACCOUNTREF
-tests.destination_number=APHONENUMBER
+tests.username=jason.morley@esendex.com
+tests.password=jasonmorley
+tests.account=DevTestLive
+tests.destination_number=441159174569
