Fixed project so tests now pass.

--- a/src/esendex.properties
+++ b/src/esendex.properties
@@ -1,5 +1,5 @@
 esendex.version=v1.0
 esendex.namespace=http://api.esendex.com/ns/
-esendex.domain=api.esendex.com
+esendex.domain=api.dev.lab
 #esendex.domain=localhost:8888
 esendex.port=80
