--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <properties>
-    <sdk.version>0.3.2</sdk.version>
+    <buildnumber>0</buildnumber>
   </properties>
   <groupId>esendex-java-sdk</groupId>
   <artifactId>esendex-java-sdk</artifactId>
-  <version>${sdk.version}</version>
+  <version>1.0.0.${buildnumber}</version>
   <build>
     <plugins>
       <plugin>
