Adds Failsafe testing and modifies file names to allow autoexec

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,19 @@
   <artifactId>esendex-java-sdk</artifactId>
   <version>1.0.0.${buildnumber}</version>
   <build>
+    <pluginManagement>
+      <plugins>
+          <plugin>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>2.3.2</version>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <version>2.17</version>
+          </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -22,11 +35,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.17</version>
-        <configuration>
-          <includes>
-            <include>**/*Tests.java</include>
-          </includes>
-        </configuration>
         <dependencies>
           <dependency>
             <groupId>org.apache.maven.surefire</groupId>
@@ -35,15 +43,12 @@
           </dependency>
         </dependencies>
       </plugin>
-    </plugins>
-    <pluginManagement>
-      <plugins>
         <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>2.17</version>
         </plugin>
-      </plugins>
-    </pluginManagement>
+    </plugins>
   </build>
   <dependencies>
     <dependency>
