Build version inlined, User-Agent implemented
The build now reads from the esendex.properties and is imported into the
User-Agent at runtime.

--- a/src/main/resources/esendex.properties
+++ b/src/main/resources/esendex.properties
@@ -2,3 +2,4 @@ esendex.version=v1.0
 esendex.namespace=http://api.esendex.com/ns/
 esendex.domain=api.esendex.com
 esendex.port=80
+esendex.build_version=${pom.version}
