--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </properties>
   <groupId>esendex-java-sdk</groupId>
   <artifactId>esendex-java-sdk</artifactId>
-  <version>1.0.0.${buildnumber}</version>
+  <version>1.0.1</version>
   <build>
     <plugins>
         <plugin>
@@ -37,6 +37,12 @@
         </dependencies>
       </plugin>
     </plugins>
+  <resources>
+      <resource>
+          <directory>src/main/resources</directory>
+          <filtering>true</filtering>
+      </resource>
+  </resources>
   </build>
   <dependencies>
     <dependency>
