--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
                 <goal>copy-dependencies</goal>
               </goals>
               <configuration>
-                <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+                <outputDirectory>${project.build.directory}/dependency</outputDirectory>
               </configuration>
            </execution>
         </executions>
