--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
             <artifactId>junit</artifactId>
             <version>4.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.pyruby</groupId>
+            <artifactId>java-stub-server</artifactId>
+            <version>0.12</version>
+        </dependency>
     </dependencies>
 
 </project>
