--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.9</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.pyruby</groupId>
